--- a/manager/src/main/resources/static/pages/fc_userResource.html
+++ b/manager/src/main/resources/static/pages/fc_userResource.html
@@ -151,9 +151,9 @@
             let beginDate = $('#beginDate').val()
             let endDate = $('#endDate').val()
             let productName = $('#productName').val()
-            console.log("beginDate :" + beginDate)
+            /*console.log("beginDate :" + beginDate)
             console.log("endDate :" + endDate)
-            console.log("productName :" + productName)
+            console.log("productName :" + productName)*/
             table.reload('table-page', {
                 page: {
                     curr: 1 //重新从第 1 页开始
