--- a/manager/src/main/resources/static/pages/gameTable.html
+++ b/manager/src/main/resources/static/pages/gameTable.html
@@ -140,7 +140,7 @@
 </script>
 
 <!-- 表单元素 -->
-<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;width: 350px;height: 200px;">
 
     <div class="layui-form-item layui-hide">
         <label class="layui-form-label"></label>
