--- a/manager/src/main/resources/static/pages/roundGame.html
+++ b/manager/src/main/resources/static/pages/roundGame.html
@@ -505,7 +505,7 @@
 </script>
 
 <!-- 表单元素 -->
-<form class="layui-form layui-hide" id="form_table" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form class="layui-form layui-hide" id="form_table" lay-filter="form_table" style="padding: 20px 0 0 0;width: 550px;height: 200px;">
 
     <div class="layui-form-item layui-hide">
         <div class="layui-input-inline ">
