--- a/manager/src/main/resources/static/pages/roundReceive.html
+++ b/manager/src/main/resources/static/pages/roundReceive.html
@@ -195,7 +195,7 @@
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
-                {field: 'ddtime', width: 120, title: '获奖时间', sort: true},
+                {field: 'ddtime', width: '13%', title: '获奖时间', sort: true},
                 {field: 'dduid', width: 120, title: '用户ID', sort: true},
                 {field: 'userName', width: 120, title: '用户昵称', sort: true},
                 {field: 'gameName', width: 120, title: '游戏名称', sort: true},
