--- a/manager/src/main/resources/static/pages/ProgramRanking.html
+++ b/manager/src/main/resources/static/pages/ProgramRanking.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -22,30 +23,33 @@
                 <div class="layui-form layui-card-header layuiadmin-card-header-auto" >
                     <form class="layui-form-item" id="search-form">
                         <div class="layui-inline" >
-                            <label class="layui-form-label">时间范围</label>
+                            <label class="layui-form-label">结束时间</label>
                             <div class="layui-input-inline" style="width: 12rem;" >
                                 <input type="text" class="layui-input" id="times" name="times" placeholder=" - ">
                             </div>
                         </div>
+
                         <div class="layui-inline">
                             <label class="layui-form-label">产品名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="appName" name="appName">
+                            <div class="layui-input-inline" style="width:12rem;">
+                                <div id="appName" name="appName" lay-filter="appName"></div>
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">游戏名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="gameName" name="gameName">
+                            <div class="layui-input-block">
+                                <div class="layui-input-inline" style="width: 12rem;"
+                                     id="gameName" name="gameName" lay-filter="gameName" autocomplete="off"></div>
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">赛制名称</label>
+                            <div class="layui-input-block">
+                                <div class="layui-input-inline" style="width: 12rem;"
+                                     id="roundName" name="roundName" lay-filter="roundName" autocomplete="off"></div>
                             </div>
                         </div>
 
-                        <div class="layui-inline">
-                            <label class="layui-form-label">赛制名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="roundName" name="roundName">
-                            </div>
-                        </div>
                         <div class="layui-inline">
                             <button class="layui-btn layuiadmin-btn-useradmin" lay-submit="" lay-filter="front-search">
                                 <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
@@ -86,6 +90,140 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
+        var $ = layui.$;
+        var appNames = [];
+        let codesArr = [];
+        var gameCodes = [];
+
+        var appSelect = xmSelect.render({
+            el: '#appName',
+            name: 'appName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+
+        var codeSelect = xmSelect.render({
+            el: '#roundName',
+            name: 'roundName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        var gameCodeSelect = xmSelect.render({
+            el: '#gameName',
+            name: 'gameName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/appname',
+            success: (res) => {
+
+                res.forEach(function (val, index, arr) {
+                    var type ;
+                    if(val.programType ===0){
+                        type ="小游戏";
+                    }
+                    if(val.programType ===1){
+                        type ="小程序";
+                    }
+                    if(val.programType ===2){
+                        type ="公众号";
+                    }
+                    let context = {name: val.productName+"（"+type+")", value: val.ddappid, selected: false};
+                    appNames.push(context);
+                });
+                appSelect.update(
+                    {
+                        data: appNames,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        }),
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/roundall',
+            success: (res) => {
+
+                res.forEach(function (val, index, arr) {
+                    let context = {name: val.ddcode, value: val.ddcode, selected: false};
+                    codesArr.push(context);
+                });
+                codeSelect.update(
+                    {
+                        data: codesArr,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        }),
+        $.ajax({
+                type: "get",
+                dataType: "json",
+                url: '../manage/games/selectBox',
+                success: (res) => {
+                    res.forEach(function (val, index, arr) {
+                        gameCodes.push(val);
+                    });
+                    let data = [];
+                    for (let i = 0; i < gameCodes.length; i++) {
+                        let val = gameCodes[i];
+                        let context = {name: val.title, value: val.value, selected: false};
+                        data.push(context);
+                    }
+                    gameCodeSelect.update(
+                        {
+                            data: data,
+                            autoRow: true,
+                        }
+                    );
+                },
+                error: function () {
+                    alert("查询失败")
+                }
+            });
 
         table.render({
             elem: '#table-page',
