--- a/manager/src/main/resources/static/pages/Ranking.html
+++ b/manager/src/main/resources/static/pages/Ranking.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -27,18 +28,23 @@
                                 <input type="text" class="layui-input" id="times" name="times" placeholder=" - ">
                             </div>
                         </div>
+
                         <div class="layui-inline">
                             <label class="layui-form-label">游戏名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="gameName" name="gameName">
+                            <div class="layui-input-block">
+                                <div class="layui-input-inline" style="width: 12rem;"
+                                     id="gameName" name="gameName" lay-filter="gameName" autocomplete="off"></div>
                             </div>
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">赛制名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="roundName" name="roundName">
+                            <div class="layui-input-block">
+                                <div class="layui-input-inline" style="width: 12rem;"
+                                     id="roundName" name="roundName" lay-filter="roundName" autocomplete="off"></div>
                             </div>
                         </div>
+
+
                         <div class="layui-inline">
                             <button class="layui-btn layuiadmin-btn-useradmin" lay-submit="" lay-filter="front-search">
                                 <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
@@ -79,6 +85,89 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
+        var $ = layui.$;
+        let codesArr = [];
+        var gameCodes = [];
+        var codeSelect = xmSelect.render({
+            el: '#roundName',
+            name: 'roundName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        var gameCodeSelect = xmSelect.render({
+            el: '#gameName',
+            name: 'gameName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/roundall',
+            success: (res) => {
+
+                res.forEach(function (val, index, arr) {
+                    let context = {name: val.ddcode, value: val.ddcode, selected: false};
+                    codesArr.push(context);
+                });
+                codeSelect.update(
+                    {
+                        data: codesArr,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        }),
+            $.ajax({
+                type: "get",
+                dataType: "json",
+                url: '../manage/games/selectBox',
+                success: (res) => {
+                    res.forEach(function (val, index, arr) {
+                        gameCodes.push(val);
+                    });
+                    let data = [];
+                    for (let i = 0; i < gameCodes.length; i++) {
+                        let val = gameCodes[i];
+                        let context = {name: val.title, value: val.value, selected: false};
+                        data.push(context);
+                    }
+                    gameCodeSelect.update(
+                        {
+                            data: data,
+                            autoRow: true,
+                        }
+                    );
+                },
+                error: function () {
+                    alert("查询失败")
+                }
+            });
 
         table.render({
             elem: '#table-page',
