--- a/manager/src/main/resources/static/pages/UserInfo.html
+++ b/manager/src/main/resources/static/pages/UserInfo.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -29,13 +30,13 @@
                             </div>
                         </div>
 
-                        <div class="layui-inline">
+                     <!--   <div class="layui-inline">
                             <label class="layui-form-label">登录时间</label>
                             <div class="layui-input-inline">
                                 <input type="text" class="layui-input" id="logintime" name="logintime"
                                        placeholder=" - ">
                             </div>
-                        </div>
+                        </div>-->
                         <div class="layui-inline">
                             <label class="layui-form-label">用户昵称</label>
                             <div class="layui-input-inline" style="width: 6rem;">
@@ -51,11 +52,19 @@
                         </div>
 
                         <div class="layui-inline">
-                            <button class="layui-btn layuiadmin-btn-useradmin" lay-submit="" lay-filter="front-search">
+                            <label class="layui-form-label">产品名称</label>
+                            <div class="layui-input-inline" style="width:14rem;">
+                                <div id="ddappid" name="ddappid" lay-filter="ddappid"></div>
+                            </div>
+                        </div>
+
+                        <div class="layui-inline">
+                            <button  id="cx" class="layui-btn layuiadmin-btn-useradmin" lay-submit="" lay-filter="search">
                                 <i class="layui-icon layui-icon-search layuiadmin-button-btn"></i>
                             </button>
                         </div>
                     </form>
+
                 </div>
 
                 <!-- 数据表格 -->
@@ -68,11 +77,11 @@
     </div>
 </div>
 </div>
-
 <script type="text/html" id="toolbar">
     <div class="layui-table-tool-temp">
     </div>
 </script>
+
 <script>
     var operatorurl = '../manage/userinfo';
     layui.use(['table', 'laydate', 'form', 'layer'], function () {
@@ -80,30 +89,107 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
+        var $ = layui.$;
+        var appNames = [];
+        var appSelect = xmSelect.render({
+            el: '#ddappid',
+            name: 'appSelect',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/appname',
+            success: (res) => {
 
+                res.forEach(function (val, index, arr) {
+                    //console.log("我是appName :"+val.ddappid+"名字:"+ val.productName)
+                    var type ;
+                    if(val.programType ===0){
+                        type ="小游戏";
+                    }
+                    if(val.programType ===1){
+                        type ="小程序";
+                    }
+                    if(val.programType ===2){
+                        type ="公众号";
+                    }
+                    let context = {name: val.productName+"（"+type+")", value: val.ddappid, selected: false};
+                    appNames.push(context);
+                });
+                appSelect.update(
+                    {
+                        data: appNames,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        });
+        // 搜索查询
+        form.on('submit(search)', function (data) {
+
+            var field = data.field;
+            var $1 = $.trim($('#ddname').val());
+            var $2 = $.trim($("#uid").val());
+            if($1 ==="" && $2 === ""){
+                layer.msg('用户昵称和用户ID不能同时为空',function() {time:1500});
+                return false;
+            }
+            //执行重载
+            table_reload(field);
+            return false;
+        });
         table.render({
             elem: '#table-page',
             url: operatorurl + '?datagrid=data',
             cols: [[
                 {type: 'checkbox'},
-                {field: 'dduid', width: 120, title: '用户ID', sort: true},
+                {field: 'dduid', width: '17%', title: '用户ID', sort: true},
                 {field: 'ddname', width: 120, title: '用户昵称', sort: true},
-                {field: 'ddappid', width: 120, title: '来源AppId', sort: true},
+                {field: 'ddappid', width: '12%', title: '来源AppId', sort: true},
 
                 {field: 'productName', width: 120, title: '产品名称', sort: true},
                 {field: 'ddregistertime', width: 120, title: '注册时间', sort: true},
-                {field: 'ddlogintime', width: 120, title: '最后登录时间', sort: true},
-                {field: 'ddtotalpaymoney', width: 120, title: '充值金额', sort: true},
+                {field: 'ddlogintime', width: '10%', title: '最后登录时间', sort: true},
+
                 {field: 'ddcoincount', width: 120, title: '剩余金币', sort: true},
-                {field: 'ddmoney', width: 120, title: '剩余可提现金额', sort: true},
-                {field: 'remainMoney', width: 120, title: '已提现金额', sort: true}
+                {field: 'remainMoney', width: '10%', title: '剩余可提现金额', sort: true},
+                {field: 'cashOut', width: '10%', title: '已提现金额', sort: true}
 
             ]],
             page: true,
             toolbar: '#toolbar',
             defaultToolbar: ['filter', 'exports']
         });
-
+        // 表格重载
+        function table_reload(where_data) {
+            if (where_data instanceof Object) {
+                where_data = JSON.stringify(where_data);
+            }
+            table.reload('table-page', {
+                where: { //设定异步数据接口的额外参数，任意设
+                    'searchData': where_data,
+                },
+                page: {
+                    curr: 1 //重新从第 1 页开始
+                }
+            });
+        }
         laydate.render({
             elem: '#registertime',
             range: true
