--- a/manager/src/main/resources/static/pages/appConfig.html
+++ b/manager/src/main/resources/static/pages/appConfig.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -29,8 +30,8 @@
                         </div>
                         <div class="layui-inline">
                             <label class="layui-form-label">产品名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="gameName" name="gameName">
+                            <div class="layui-input-inline" style="width: 14rem;">
+                                <div id="gameName" name="gameName"></div>
                             </div>
                         </div>
 
@@ -68,10 +69,28 @@
     var operatorurl = '../manage/appconfig';
     layui.use(['table', 'laydate', 'form', 'layer', 'multiSelect'], function () {
         var table = layui.table,
-            $ = layui.jquery,
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
+        var $ = layui.$;
+        var appNames = [];
+        var appSelect = xmSelect.render({
+            el: '#gameName',
+            name: 'gameName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
         $(() => {
             $.ajax({
                 type: "get",
@@ -93,6 +112,38 @@
                     alert("查询失败")
                 }
             })
+            $.ajax({
+                type: "get",
+                dataType: "json",
+                url: '../manage/roundmatch/appname',
+                success: (res) => {
+
+                    res.forEach(function (val, index, arr) {
+                        //console.log("我是appName :"+val.ddappid+"名字:"+ val.productName)
+                        var type ;
+                        if(val.programType ===0){
+                            type ="小游戏";
+                        }
+                        if(val.programType ===1){
+                            type ="小程序";
+                        }
+                        if(val.programType ===2){
+                            type ="公众号";
+                        }
+                        let context = {name: val.productName+"（"+type+")", value: val.ddappid, selected: false};
+                        appNames.push(context);
+                    });
+                    appSelect.update(
+                        {
+                            data: appNames,
+                            autoRow: true,
+                        }
+                    );
+                },
+                error: function () {
+                    alert("查询失败")
+                }
+            });
         });
 
         form.on('select(gameType)', function(data){
@@ -168,7 +219,7 @@
 </script>
 
 <!-- 表单元素 -->
-<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;width: 400px;height: 450px;">
     <div class="layui-form-item ">
         <label class="layui-form-label">产品名称</label>
         <div class="layui-input-inline">
