--- a/manager/src/main/resources/static/pages/fc_buypay.html
+++ b/manager/src/main/resources/static/pages/fc_buypay.html
@@ -64,7 +64,6 @@
 
 <script type="text/html" id="toolbar">
     <div class="layui-table-tool-temp">
-        <div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
         <div class="layui-inline" lay-event="update"><i class="layui-icon layui-icon-edit"></i></div>
         <div class="layui-inline" lay-event="delete"><i class="layui-icon layui-icon-delete"></i></div>
     </div>
@@ -162,7 +161,7 @@
 </script>
 
 <!-- 表单元素 -->
-<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;width: 350px;height: 200px;">
 
     <div class="layui-form-item ">
         <label class="layui-form-label">日期 *</label>
