--- a/manager/src/main/resources/static/pages/gamesList.html
+++ b/manager/src/main/resources/static/pages/gamesList.html
@@ -40,7 +40,6 @@
                         </div>
                     </form>
                 </div>
-
                 <!-- 数据表格 -->
                 <div class="layui-card-body">
                     <table class="layui-hide" lay-filter="table-page" id="table-page"></table>
@@ -69,7 +68,6 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
-
         table.render({
             elem: '#table-page',
             url: operatorurl + '?datagrid=data',
@@ -81,66 +79,81 @@
                 {field: 'ddmulticoin', width: 120, title: '游戏多人组队所需金币数', sort: true},
                 {field: 'ddmaxplayer', width: 120, title: '游戏容纳人数上限', sort: true},
                 {field: 'ddrolecount', width: 120, title: '游戏角色个数', sort: true},
-                {field: 'ddispk', width: 120, title: '游戏是否为PK', sort: true,
+                {
+                    field: 'ddispk', width: 120, title: '游戏是否为PK', sort: true,
                     templet: (d) => {
-                        if (d.ddispk == 1) {
+                        if (d.ddispk === 1) {
                             return '1-pk';
-                        } else if (d.ddispk == 0) {
+                        } else if (d.ddispk === 0) {
                             return '0-闯关';
-                        }
-                        else
+                        } else
                             return '其他';
-                    }},
-                {field: 'ddavailable', width: 120, title: '游戏是否有效', sort: true,
+                    }
+                },
+                {
+                    field: 'ddavailable', width: 120, title: '游戏是否有效', sort: true,
                     templet: (d) => {
-                        if (d.ddavailable == 1) {
+                        if (d.ddavailable === 1) {
                             return '1-有效';
-                        } else if (d.ddavailable == 0) {
+                        } else if (d.ddavailable === 0) {
                             return '0-无效';
-                        }
-                        else
+                        } else
                             return '其他';
-                    }},
+                    }
+                },
                 {field: 'ddtitle', width: 120, title: '游戏称号相关内容', sort: true},
-                {field: 'ddrocker', width: 120, title: '游戏手柄方案', sort: true,
+                {
+                    field: 'ddrocker', width: 120, title: '游戏手柄方案', sort: true,
                     templet: (d) => {
-                        if (d.ddrocker == 0) {
+                        if (d.ddrocker === 0) {
                             return '0-a/b/a+b';
-                        } else if (d.ddrocker == 1) {
+                        } else if (d.ddrocker === 1) {
                             return '1-a/b/c';
-                        }else if (d.ddrocker == 2) {
+                        } else if (d.ddrocker === 2) {
                             return '2-a/b/a+b/c/d/c+d';
-                        }else if (d.ddrocker == 3) {
+                        } else if (d.ddrocker === 3) {
                             return '3-a/b';
-                        }
-                        else
+                        } else
                             return '其他';
-                    }},
-                {field: 'ddengine', width: 120, title: '游戏引擎方案', sort: true,
+                    }
+                },
+                {
+                    field: 'ddengine', width: 120, title: '游戏引擎方案', sort: true,
                     templet: (d) => {
-                        if (d.ddengine == 0) {
+                        if (d.ddengine === 0) {
                             return '0-CPS1/CPS2/CPS3';
-                        } else if (d.ddengine == 1) {
+                        } else if (d.ddengine === 1) {
                             return '1-NEOGEO';
-                        }
-                        else
+                        } else
                             return '其他';
-                    }},
-                {field: 'ddresolution', width: 120, title: '游戏屏幕分辨率', sort: true,
+                    }
+                },
+                {
+                    field: 'ddresolution', width: 120, title: '游戏屏幕分辨率', sort: true,
                     templet: (d) => {
-                        if (d.ddresolution == 0) {
+                        if (d.ddresolution === 0) {
                             return '0-384 x 224';
-                        } else if (d.ddresolution == 1) {
+                        } else if (d.ddresolution === 1) {
                             return '1-304 x 224';
-                        }else if (d.ddresolution == 2) {
+                        } else if (d.ddresolution === 2) {
                             return '2-320 x 240';
-                        }else if (d.ddresolution == 3) {
+                        } else if (d.ddresolution === 3) {
                             return '3-320 x 224';
-                        }
-                        else
+                        } else
                             return '其他';
-                    }},
-                {field: 'ddautoselect', width: 120, title: '是否自动选择', sort: true},
+                    }
+                },
+                {
+                    field: 'ddautoselect', width: 120, title: '是否自动选择', sort: true,
+                    templet: (d) => {
+                        if (d.ddautoselect === 1) {
+                            return '1-自动选择';
+                        } else if (d.ddautoselect === 0) {
+                            return '0-不自动选择';
+                        } else
+                            return '其他';
+                    }
+                },
                 {field: 'ddfriendurl', width: 120, title: '圈子链接地址', sort: true},
                 {field: 'ddshareres', width: 120, title: '分享资源', sort: true}
             ]],
@@ -175,7 +188,6 @@
                             dataType: "json",
                             success: function (result) {
                                 if (result.code === 200) {
-                                    // layer.msg(JSON.stringify(result.data));
                                 } else {
                                     layer.msg('查询失败')
                                 }
@@ -184,7 +196,6 @@
                         layer.close(index);
                     });
                 }
-
             }
         };
         $('.demoTable .layui-btn').on('click', function () {
@@ -195,25 +206,12 @@
             elem: '#times',
             range: true
         });
-        laydate.render({
-            elem: '#configDate',
-            format: 'yyyy/MM/dd'
-        });
-        laydate.render({
-            elem: '#createTime',
-            format: 'yyyy/MM/dd HH:mm'
-        });
-        laydate.render({
-            elem: '#updateTime',
-            format: 'yyyy/MM/dd HH:mm'
-        });
-
     })
-
 </script>
 
 <!-- 表单元素 -->
-<form id="form_table" class="layui-form layui-hide" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form id="form_table" class="layui-form layui-hide" lay-filter="form_table"
+      style="padding: 20px 0 0 0;width: 400px;height: 350px;">
 
     <div class="layui-form-item layui-hide">
         <label class="layui-form-label">id</label>
@@ -222,7 +220,6 @@
                    class="layui-input layui-input">
         </div>
     </div>
-
     <div class="layui-form-item ">
         <label class="layui-form-label">游戏代号</label>
         <div class="layui-input-inline">
@@ -244,8 +241,6 @@
                    class="layui-input layui-input">
         </div>
     </div>
-
-
     <div class="layui-form-item ">
         <label class="layui-form-label">游戏多人组队所需金币数</label>
         <div class="layui-input-inline">
@@ -253,8 +248,6 @@
                    class="layui-input layui-input">
         </div>
     </div>
-
-
     <div class="layui-form-item ">
         <label class="layui-form-label">游戏容纳人数上限</label>
         <div class="layui-input-inline">
@@ -262,87 +255,87 @@
                    class="layui-input layui-input">
         </div>
     </div>
-
     <div class="layui-form-item ">
         <label class="layui-form-label">游戏是否为PK</label>
         <div class="layui-input-inline">
-            <input type="text" id="ddispk" name="ddispk" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+            <select class="layui-select" id="ddispk" name="ddispk" lay-verify="required">
+                <option value=0>0-闯关</option>
+                <option value=1>1-pk</option>
+            </select>
         </div>
     </div>
-
-
     <div class="layui-form-item ">
         <label class="layui-form-label">游戏是否有效</label>
         <div class="layui-input-inline">
 
-            <select class="layui-select" id="ddavailable" name="ddavailable" >
+            <select class="layui-select" id="ddavailable" name="ddavailable">
                 <option value=1>有效</option>
                 <option value=0>无效</option>
             </select>
-    </div>
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">游戏称号相关内容</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddtitle" name="ddtitle" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
         </div>
-    </div>
-
-
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">游戏角色个数</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddrolecount" name="ddrolecount" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+        <div class="layui-form-item ">
+            <label class="layui-form-label">游戏称号相关内容</label>
+            <div class="layui-input-inline">
+                <input type="text" id="ddtitle" name="ddtitle" lay-verify="required" autocomplete="off"
+                       class="layui-input layui-input">
+            </div>
         </div>
-    </div>
-
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">游戏手柄方案</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddrocker" name="ddrocker" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+        <div class="layui-form-item ">
+            <label class="layui-form-label">游戏角色个数</label>
+            <div class="layui-input-inline">
+                <input type="text" id="ddrolecount" name="ddrolecount" lay-verify="required" autocomplete="off"
+                       class="layui-input layui-input">
+            </div>
         </div>
-    </div>
+        <div class="layui-form-item ">
+            <label class="layui-form-label">游戏手柄方案</label>
+            <div class="layui-input-inline">
 
-
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">游戏引擎方案</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddengine" name="ddengine" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+                <select class="layui-select" id="ddrocker" name="ddrocker" lay-verify="required">
+                    <option value=0>0-a/b/a+b</option>
+                    <option value=1>1-a/b/c</option>
+                    <option value=2>2-a/b/a+b/c/d/c+d</option>
+                    <option value=3>3-a/b</option>
+                </select>
+            </div>
         </div>
-    </div>
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">游戏屏幕分辨率</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddresolution" name="ddresolution" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+        <div class="layui-form-item ">
+            <label class="layui-form-label">游戏引擎方案</label>
+            <div class="layui-input-inline">
+                <select class="layui-select" id="ddengine" name="ddengine" lay-verify="required">
+                    <option value=0>0-a/b/a+b</option>
+                    <option value=1>1-NEOGEO</option>
+                </select>
+            </div>
         </div>
-    </div>
+        <div class="layui-form-item ">
+            <label class="layui-form-label">游戏屏幕分辨率</label>
+            <div class="layui-input-inline">
 
-    <div class="layui-form-item ">
-        <label class="layui-form-label">是否自动选择</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddautoselect" name="ddautoselect" lay-verify="required" autocomplete="off"
-                   class="layui-input layui-input">
+                <select class="layui-select" id="ddresolution" name="ddresolution" lay-verify="required">
+                    <option value=0>0-384 x 224</option>
+                    <option value=1>1-304 x 224</option>
+                    <option value=2>2-320 x 240</option>
+                    <option value=3>3-320 x 224</option>
+                </select>
+            </div>
         </div>
-    </div>
-
-
-    <div class="layui-form-item ">
-        <label class="layui-form-label">圈子链接地址</label>
-        <div class="layui-input-inline">
-            <input type="text" id="ddfriendurl" name="ddfriendurl"  autocomplete="off"
-                   class="layui-input layui-input">
+        <div class="layui-form-item ">
+            <label class="layui-form-label">是否自动选择</label>
+            <div class="layui-input-inline">
+                <select class="layui-select" id="ddautoselect" name="ddautoselect" lay-verify="required">
+                    <option value=0>0-不自动选择</option>
+                    <option value=1>1-自动选择</option>
+                </select>
+            </div>
         </div>
-    </div>
+        <div class="layui-form-item ">
+            <label class="layui-form-label">圈子链接地址</label>
+            <div class="layui-input-inline">
+                <input type="text" id="ddfriendurl" name="ddfriendurl" autocomplete="off"
+                       class="layui-input layui-input">
+            </div>
+        </div>
     </div>
     <div class="layui-form-item layui-hide">
         <input type="button" lay-submit lay-filter="front-submit" id="front-submit" value="确认">
