--- a/manager/src/main/resources/static/pages/recharge.html
+++ b/manager/src/main/resources/static/pages/recharge.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../layuiadmin/style/admin.css" media="all">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -27,18 +28,27 @@
                                 <input type="text" class="layui-input" id="times"  name="times" placeholder=" - ">
                             </div>
                         </div>
+
                         <div class="layui-inline">
                             <label class="layui-form-label">产品名称</label>
-                            <div class="layui-input-inline" style="width: 6rem;">
-                                <input type="text" class="layui-input" id="productName" name="productName">
+                            <div class="layui-input-inline" style="width:12rem;">
+                                <div id="productName" name="productName" lay-filter="productName"></div>
                             </div>
                         </div>
+
                         <div class="layui-inline">
                             <label class="layui-form-label">用户昵称</label>
                             <div class="layui-input-inline" style="width: 6rem;">
                                 <input type="text" class="layui-input" id="userName" name="userName">
                             </div>
                         </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">用户ID</label>
+                            <div class="layui-input-inline" style="width: 6rem;">
+                                <input type="text" class="layui-input" id="uid" name="uid">
+                            </div>
+                        </div>
+
                         <div class="layui-inline">
                             <label class="layui-form-label">提现状态</label>
                             <div class="layui-input-inline" style="width: 12rem;">
@@ -85,7 +95,58 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
+        var $ = layui.$;
+        var appNames = [];
+        var appSelect = xmSelect.render({
+            el: '#productName',
+            name: 'productName',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
+        });
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/appname',
+            success: (res) => {
 
+                res.forEach(function (val, index, arr) {
+                    //console.log("我是appName :"+val.ddappid+"名字:"+ val.productName)
+                    var type ;
+                    if(val.programType ===0){
+                        type ="小游戏";
+                    }
+                    if(val.programType ===1){
+                        type ="小程序";
+                    }
+                    if(val.programType ===2){
+                        type ="公众号";
+                    }
+                    let context = {name: val.productName+"（"+type+")", value: val.ddappid, selected: false};
+                    appNames.push(context);
+                });
+
+                appSelect.update(
+                    {
+                        data: appNames,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        }),
         table.render({
             elem: '#table-page',
             url: operatorurl + '?datagrid=data',
@@ -93,8 +154,8 @@
                 {type: 'checkbox'},
                 {field: 'dduid', width: 120, title: '用户ID', sort: true},
                 {field: 'userName', width: 120, title: '用户昵称', sort: true},
-                {field: 'ddrmb', width: 120, title: '提现金额(元)', sort: true},
-                {field: 'ddrmbed', width: 120, title: '已提现金额(元)', sort: true},
+                {field: 'ddrmb', width: 120, title: '申请提现金额(元)', sort: true},
+                // {field: 'ddrmbed', width: 120, title: '已提现金额(元)', sort: true},
                 {field: 'remainAmount', width: 120, title: '剩余提现金额(元)', sort: true},
                 {field: 'programType', width: 120, title: '来源类型', sort: true,
                     templet: (d) => {
@@ -136,8 +197,8 @@
                             return '其他';
                     }
                 },
-                {field: 'ddtrans', width: 120, title: '完成时间', sort: true},
-                {field: 'ddtimes', width: 120, title: '操作时间', sort: true}
+                {field: 'ddtrans', width: 120, title: '审核通过时间', sort: true},
+                {field: 'ddtimes', width: 120, title: '提现时间', sort: true}
             ]],
             limit: 20,
             autoSort: false,
