--- a/manager/src/main/resources/static/pages/roundExt.html
+++ b/manager/src/main/resources/static/pages/roundExt.html
@@ -11,6 +11,7 @@
     <link href="../layuiadmin/style/admin.css" media="all" rel="stylesheet">
     <script src="../layuiadmin/layui/layui.js"></script>
     <script src="../layuiadmin/modules/operation.js"></script>
+    <script src="../layuiadmin/xm-select.js"></script>
     <script></script>
 </head>
 <body>
@@ -22,9 +23,16 @@
                 <div class="layui-form layui-card-header layuiadmin-card-header-auto">
                     <form class="layui-form-item" id="search-form">
                         <div class="layui-inline">
-                            <label class="layui-form-label">时间范围</label>
+                            <label class="layui-form-label">配置时间</label>
                             <div class="layui-input-inline">
-                                <input class="layui-input" id="times" placeholder=" - " type="text">
+                                <input class="layui-input" id="times" name="times" placeholder=" - " type="text">
+                            </div>
+                        </div>
+                        <div class="layui-inline">
+                            <label class="layui-form-label">赛制名称</label>
+                            <div class="layui-input-block">
+                                <div class="layui-input-inline" style="width: 12rem;"
+                                     id="roundcode" name="roundSelect" lay-filter="roundcode" autocomplete="off"></div>
                             </div>
                         </div>
                         <div class="layui-inline">
@@ -60,47 +68,86 @@
             form = layui.form,
             layer = layui.layer,
             laydate = layui.laydate;
-
-        table.render({
-            elem: '#table-page',
-            url: operatorurl + '?datagrid=data',
-            cols: [[
-                {type: 'checkbox'},
-                {field: 'inserttime', width:'14%', title: '配置时间', sort: true},
-                {field: 'ddcode', width: 120, title: '赛制编号', sort: true},
-                {field: 'ddname', width: 120, title: '赛制名称', sort: true},
-                {
-                    field: 'ddpriority', width: 120, title: '优先级', sort: true,
-                    templet: (d) => {
-                        if (d.ddpriority == 1) {
-                            return "高";
-                        } else if (d.ddpriority == 2) {
-                            return "中";
-                        } else if (d.ddpriority == 3) {
-                            return "低";
-                        } else {
-                            return "关闭";
-                        }
-                    }
-                },
-                {field: 'tip', width: 120, title: '赛制时长', sort: true},
-                {
-                    field: 'ddgroup', width: 120, title: '赛制类型', sort: true,
-                    templet: (d) => {
-                        if (d.ddgroup == true) {
-                            return "小程序";
-                        } else {
-                            return "小游戏";
-                        }
-                    }
-                },
-                {field: 'ddreward', width:'29%', title: '赛场奖励', sort: true}
-
-            ]],
-            page: true,
-            toolbar: '#toolbar',
-            defaultToolbar: ['filter', 'exports']
+        var $ = layui.$;
+        let codesArr = [];
+        var codeSelect = xmSelect.render({
+            el: '#roundcode',
+            name: 'roundSelect',
+            language: 'zn',
+            toolbar: {show: true},
+            data: [],
+            radio: true,
+            clickClose: true,
+            autoRow: true,
+            paging: true,
+            pageSize: 5,
+            delay: 500,
+            filterable: true,
+            filterDone: function (val, list) {
+                console.log(`搜索完毕, 搜索关键词: ${val}, 过滤数据: ${list.length}个`)
+            },
         });
+        $.ajax({
+            type: "get",
+            dataType: "json",
+            url: '../manage/roundmatch/roundall',
+            success: (res) => {
+
+                res.forEach(function (val, index, arr) {
+                    let context = {name: val.ddcode, value: val.ddcode, selected: false};
+                    codesArr.push(context);
+                });
+                codeSelect.update(
+                    {
+                        data: codesArr,
+                        autoRow: true,
+                    }
+                );
+            },
+            error: function () {
+                alert("查询失败")
+            }
+        }),
+            table.render({
+                elem: '#table-page',
+                url: operatorurl + '?datagrid=data',
+                cols: [[
+                    {type: 'checkbox'},
+                    {field: 'inserttime', width: '14%', title: '配置时间', sort: true},
+                    {field: 'ddcode', width: 120, title: '赛制编号', sort: true},
+                    {field: 'ddname', width: 120, title: '赛制名称', sort: true},
+                    {
+                        field: 'ddpriority', width: 120, title: '优先级', sort: true,
+                        templet: (d) => {
+                            if (d.ddpriority == 1) {
+                                return "高";
+                            } else if (d.ddpriority == 2) {
+                                return "中";
+                            } else if (d.ddpriority == 3) {
+                                return "低";
+                            } else {
+                                return "关闭";
+                            }
+                        }
+                    },
+                    {field: 'tip', width: 120, title: '赛制时长', sort: true},
+                    {
+                        field: 'ddgroup', width: 120, title: '赛制类型', sort: true,
+                        templet: (d) => {
+                            if (d.ddgroup == true) {
+                                return "小程序";
+                            } else {
+                                return "小游戏";
+                            }
+                        }
+                    },
+                    {field: 'ddreward', width: '35%', title: '赛场奖励', sort: true}
+
+                ]],
+                page: true,
+                toolbar: '#toolbar',
+                defaultToolbar: ['filter', 'exports']
+            });
 
         laydate.render({
             elem: '#times',
@@ -116,7 +163,7 @@
 </script>
 
 <!-- 表单元素 -->
-<form class="layui-form layui-hide" id="form_table" lay-filter="form_table" style="padding: 20px 0 0 0;">
+<form class="layui-form layui-hide" id="form_table" lay-filter="form_table" style="padding: 20px 0 0 0;width: 400px;height: 450px;">
 
 
     <div class="layui-form-item">
@@ -144,12 +191,12 @@
         </div>
     </div>
 
-<!--    <div class="layui-form-item ">-->
-<!--        <label class="layui-form-label">赛场状态</label>-->
-<!--        <div class="layui-input-inline">-->
-<!--            <input type="checkbox" name="ddstate" lay-skin="switch" checked="checked">-->
-<!--        </div>-->
-<!--    </div>-->
+    <!--    <div class="layui-form-item ">-->
+    <!--        <label class="layui-form-label">赛场状态</label>-->
+    <!--        <div class="layui-input-inline">-->
+    <!--            <input type="checkbox" name="ddstate" lay-skin="switch" checked="checked">-->
+    <!--        </div>-->
+    <!--    </div>-->
     <div class="layui-form-item ">
         <label class="layui-form-label">原时长</label>
         <div class="layui-input-inline">
@@ -168,7 +215,7 @@
     <div class="layui-form-item ">
         <label class="layui-form-label">赛制类型</label>
         <div class="layui-input-inline">
-            <select class="layui-select" id="ddgroup" name="ddgroup" >
+            <select class="layui-select" id="ddgroup" name="ddgroup">
                 <option value=true>小程序</option>
                 <option value=false>小游戏</option>
             </select>
